log
Fri Mar 11 18:54:25 HSP 2022: 
 tests:  0|7
total_score: 0/70
bada42c
Fri Mar 11 19:02:10 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a60b62
Fri Mar 11 20:12:29 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:40:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     (*suma) = ((a+(n-m)),m) ;
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
808755a
Fri Mar 11 20:15:05 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
2f4dab7
